# porm

./: Cargo.toml  README.md
.github/workflows/: main.yml  publish-macros.yml  publish-parser.yml  publish.yml
config/: Cargo.toml
config/src/: lib.rs  pluralizer.rs
example/: Cargo.toml  build.rs
example/sql/: 0.sql  1.sql
example/src/: db.rs  main.rs
macros/: Cargo.toml
macros/src/: include_models.rs  lib.rs
parser/: Cargo.toml
parser/src/: lib.rs  tests.rs
parser/src/column/: mod.rs
parser/src/error/: column.rs  constraint.rs  mod.rs
parser/src/migration/: mod.rs  str.rs
parser/src/model/: fk.rs  index.rs  mod.rs
parser/src/ty/: mod.rs
parser/src/writer/: mod.rs  printable.rs
src/: lib.rs
src/migration/: logger.rs  mod.rs
