[package]
name = "porm"
description = "SQL first ORM for PostgreSQL"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ultimaweapon/porm"
edition = "2024"

[dependencies]
porm-macros = { version = "=0.1.0", path = "macros" }
tokio-postgres = "0.7.17"

[workspace]
members = ["example", "macros", "parser"]
