[package]
name = "porm-parser"
description = "SQL parser for Porm"
version = "0.1.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ultimaweapon/porm"
edition = "2024"

[dependencies]
heck = "0.5.0"
indexmap = "2.13.0"
memchr = "2.8.0"
pg_query = "6.1.1"
proc-macro2 = "1.0.106"
rustc-hash = "2.1.1"
thiserror = "2.0.18"
